--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=7.1",
     "phpstan/phpstan": "^0.9",
-    "phpunit/phpunit": "^6.5",
+    "phpstan/phpstan-doctrine": "^0.9",
+    "phpstan/phpstan-phpunit": "^0.9",
     "slevomat/coding-standard": "^4.0",
     "squizlabs/php_codesniffer": "^3.2"
   }
