--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     "phpstan/phpstan": "^0.10",
     "phpstan/phpstan-doctrine": "^0.10",
     "phpstan/phpstan-phpunit": "^0.10",
+    "phpstan/phpstan-symfony": "^0.10",
+    "phpunit/phpunit": "^7.2",
     "slevomat/coding-standard": "^4.6",
     "squizlabs/php_codesniffer": "^3.3"
   }
