--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   ],
   "require": {
     "php": ">=7.1",
+    "brianium/paratest": "^2.2",
     "phpstan/phpstan": "^0.11",
     "phpstan/phpstan-doctrine": "^0.11",
     "phpstan/phpstan-phpunit": "^0.11",
