--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.2",
     "brianium/paratest": "^3.0",
     "phpstan/phpstan": "^0.11",
     "phpstan/phpstan-doctrine": "^0.11",
+    "phpstan/phpstan-nette": "^0.11",
     "phpstan/phpstan-phpunit": "^0.11",
     "phpstan/phpstan-symfony": "^0.11",
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^8.3",
     "slevomat/coding-standard": "^5.0",
     "squizlabs/php_codesniffer": "^3.4"
   }
