--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,15 @@
       "email": "venca.email@gmail.com"
     }
   ],
+  "autoload-dev": {
+    "psr-4": {
+      "Hanaboso\\PhpCheckUtils\\PhpUnit": "PhpUnit/"
+    }
+  },
   "require": {
     "php": ">=7.2",
     "brianium/paratest": "^3.0",
+    "dg/bypass-finals": "^1.1",
     "phpstan/phpstan": "^0.11",
     "phpstan/phpstan-doctrine": "^0.11",
     "phpstan/phpstan-nette": "^0.11",
@@ -18,6 +24,6 @@
     "phpstan/phpstan-symfony": "^0.11",
     "phpunit/phpunit": "^8.3",
     "slevomat/coding-standard": "^5.0",
-    "squizlabs/php_codesniffer": "^3.4"
+    "squizlabs/php_codesniffer": "^3.5"
   }
 }
