--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
       "email": "venca.email@gmail.com"
     }
   ],
-  "autoload-dev": {
+  "autoload": {
     "psr-4": {
-      "Hanaboso\\PhpCheckUtils\\PhpUnit": "PhpUnit/"
+      "Hanaboso\\PhpCheckUtils\\PhpUnit\\": "PhpUnit/"
     }
   },
   "require": {
