--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,22 @@
     }
   },
   "require": {
-    "php": ">=7.2",
-    "brianium/paratest": "^3.0",
+    "php": ">=7.3",
+    "ext-json": "*",
+    "apitte/core": "^0.6",
+    "brianium/paratest": "^3.1",
     "dg/bypass-finals": "^1.1",
+    "doctrine/mongodb-odm": "^1.3",
+    "doctrine/orm": "^2.6",
     "phpstan/phpstan": "^0.11",
     "phpstan/phpstan-doctrine": "^0.11",
     "phpstan/phpstan-nette": "^0.11",
     "phpstan/phpstan-phpunit": "^0.11",
     "phpstan/phpstan-symfony": "^0.11",
-    "phpunit/phpunit": "^8.3",
+    "phpunit/phpunit": "^8.4",
     "slevomat/coding-standard": "^5.0",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "symfony/browser-kit": "^4.3",
+    "symfony/framework-bundle": "^4.3"
   }
 }
