--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "slevomat/coding-standard": "^5.0",
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/browser-kit": "^4.3",
-    "symfony/framework-bundle": "^4.3"
+    "symfony/framework-bundle": "^4.3",
+    "symfony/security-core": "^4.3"
   }
 }
