--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,9 @@
          xsi:noNamespaceSchemaLocation="./../../phpunit/phpunit/phpunit.xsd"
          colors="true"
          cacheResult="false"
+         failOnRisky="true"
+         failOnWarning="true"
+         verbose="true"
 >
     <extensions>
         <extension class="Hanaboso\PhpCheckUtils\PhpUnit\Hooks\FinalMockHook"/>
