--- a/composer.json
+++ b/composer.json
@@ -29,16 +29,16 @@
         "dg/bypass-finals": "^1.1",
         "doctrine/mongodb-odm": "^2.0",
         "doctrine/orm": "^2.7",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-doctrine": "^0.11",
-        "phpstan/phpstan-nette": "^0.11",
-        "phpstan/phpstan-phpunit": "^0.11",
-        "phpstan/phpstan-symfony": "^0.11",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
+        "phpstan/phpstan-nette": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^8.4",
         "slevomat/coding-standard": "^5.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^4.4",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/security-core": "^4.4"
+        "symfony/browser-kit": "^4.4 | ^5.0",
+        "symfony/framework-bundle": "^4.4 | ^5.0",
+        "symfony/security-core": "^4.4 | ^5.0"
     }
 }
