--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
+		- '#Expression \"\$.*\" on a separate line does not do anything\.#'
 		- '#Call to an undefined method React\\Promise\\PromiseInterface::(otherwise|done|cancel|reject)\(\)\.#' # remove after install react/promises 3.0
 		- '#Call to an undefined method Doctrine\\Common\\Persistence\\ObjectRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ORM\\EntityRepository::*.#' # remove after better doctrine support
