--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
+    "version": "1.1.4",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
