--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^8.5",
         "slevomat/coding-standard": "^6.0",
+        "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^4.4 | ^5.0",
         "symfony/framework-bundle": "^4.4 | ^5.0",
