--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,13 @@
+includes:
+	- ./../../phpstan/phpstan-nette/extension.neon
+	- ./../../phpstan/phpstan-symfony/extension.neon
+	- ./../../phpstan/phpstan-phpunit/extension.neon
+	- ./../../phpstan/phpstan-doctrine/extension.neon
+	- ./../../phpstan/phpstan-nette/rules.neon
+	- ./../../phpstan/phpstan-symfony/rules.neon
+	- ./../../phpstan/phpstan-phpunit/rules.neon
+	- ./../../phpstan/phpstan-doctrine/rules.neon
+
 parameters:
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
@@ -6,10 +16,23 @@ parameters:
 		- '#Call to an undefined method Doctrine\\Common\\Persistence\\ObjectRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ORM\\EntityRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ODM\\MongoDB\\DocumentRepository::*.#' # remove after better doctrine support
-		- '#T_ANON_CLASS#'
-		- '#T_DOC_COMMENT_CLOSE_TAG#'
-		- '#T_DOC_COMMENT_OPEN_TAG#'
-		- '#T_DOC_COMMENT_STRING#'
-		- '#T_DOC_COMMENT_TAG#'
-		- '#T_DOC_COMMENT_WHITESPACE#'
-		- '#T_STRING_CONCAT#'
+
+services:
+	-
+		class: Spaze\PHPStan\Rules\Disallowed\FunctionCalls
+		tags:
+			- phpstan.rules.rule
+		arguments:
+			forbiddenCalls:
+				-
+					function: 'var_dump()'
+					message: 'use logger instead'
+				-
+					function: 'var_export()'
+					message: 'use logger instead'
+				-
+					function: 'print_r()'
+					message: 'use logger instead'
+				-
+					function: 'file_put_content()'
+					message: 'use logger instead'
