--- a/phpstan.neon
+++ b/phpstan.neon
@@ -36,3 +36,21 @@ services:
 				-
 					function: 'file_put_content()'
 					message: 'use logger instead'
+				-
+					function: 'json_decode()'
+					message: 'use Hanaboso\Utils\String\Json::decode() instead'
+				-
+					function: 'json_encode()'
+					message: 'use Hanaboso\Utils\String\Json::encode() instead'
+	-
+		class: Spaze\PHPStan\Rules\Disallowed\StaticCalls
+		tags:
+			- phpstan.rules.rule
+		arguments:
+			forbiddenCalls:
+				-
+					method: 'Nette\Utils\Json::decode()'
+					message: 'use Hanaboso\Utils\String\Json::decode() instead'
+				-
+					method: 'Nette\Utils\Json::encode()'
+					message: 'use Hanaboso\Utils\String\Json::encode() instead'
