--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,21 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
+            "role": "Owner",
             "email": "info@hanaboso.com"
         },
         {
             "name": "Radek Jirsa",
+            "role": "Developer",
             "email": "jirsa.r@hanaboso.com"
         },
         {
             "name": "Radek Brůha",
+            "role": "Developer",
             "email": "bruha.r@hanaboso.com"
         }
     ],
