--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
-    "version": "1.1.12",
+    "version": "1.1.13",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -46,6 +46,7 @@
         "phpstan/phpstan-doctrine": "^0.12",
         "phpstan/phpstan-nette": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^8.5",
         "slevomat/coding-standard": "^6.0",
