--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,6 +9,16 @@ includes:
 	- ./../../phpstan/phpstan-doctrine/rules.neon
 
 parameters:
+	polluteScopeWithLoopInitialAssignments: false
+	polluteScopeWithAlwaysIterableForeach: false
+	checkAlwaysTrueCheckTypeFunctionCall: true
+	checkAlwaysTrueInstanceof: true
+	checkAlwaysTrueStrictComparison: true
+	checkExplicitMixedMissingReturn: true
+	checkFunctionNameCase: true
+	checkMissingClosureNativeReturnTypehintRule: true
+	reportMaybesInMethodSignatures: true
+	reportStaticMethodSignatures: true
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
 		- '#Expression \"\$.*\" on a separate line does not do anything\.#'
@@ -45,6 +55,7 @@ services:
 				-
 					function: 'json_encode()'
 					message: 'use Hanaboso\Utils\String\Json::encode() instead'
+
 	-
 		class: Spaze\PHPStan\Rules\Disallowed\StaticCalls
 		tags:
@@ -57,3 +68,37 @@ services:
 				-
 					method: 'Nette\Utils\Json::encode()'
 					message: 'use Hanaboso\Utils\String\Json::encode() instead'
+
+
+	-
+		class: PHPStan\Rules\Operators\OperatorRuleHelper
+	-
+		class: PHPStan\Rules\VariableVariables\VariablePropertyFetchRule
+		arguments:
+			universalObjectCratesClasses: %universalObjectCratesClasses%
+		tags:
+			- phpstan.rules.rule
+
+rules:
+	- PHPStan\Rules\Cast\UselessCastRule
+	- PHPStan\Rules\Classes\RequireParentConstructCallRule
+	- PHPStan\Rules\DisallowedConstructs\DisallowedImplicitArrayCreationRule
+	- PHPStan\Rules\ForeachLoop\OverwriteVariablesWithForeachRule
+	- PHPStan\Rules\Methods\WrongCaseOfInheritedMethodRule
+	- PHPStan\Rules\Operators\OperandInArithmeticPostDecrementRule
+	- PHPStan\Rules\Operators\OperandInArithmeticPostIncrementRule
+	- PHPStan\Rules\Operators\OperandInArithmeticPreDecrementRule
+	- PHPStan\Rules\Operators\OperandInArithmeticPreIncrementRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticAdditionRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticDivisionRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticExponentiationRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticModuloRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticMultiplicationRule
+	- PHPStan\Rules\Operators\OperandsInArithmeticSubtractionRule
+	- PHPStan\Rules\StrictCalls\DynamicCallOnStaticMethodsRule
+	- PHPStan\Rules\StrictCalls\StrictFunctionCallsRule
+	- PHPStan\Rules\SwitchConditions\MatchingTypeInSwitchCaseConditionRule
+	- PHPStan\Rules\VariableVariables\VariableMethodCallRule
+	- PHPStan\Rules\VariableVariables\VariableStaticMethodCallRule
+	- PHPStan\Rules\VariableVariables\VariableStaticPropertyFetchRule
+	- PHPStan\Rules\VariableVariables\VariableVariablesRule
