--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
-    "version": "1.1.14",
+    "version": "1.1.15",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -37,7 +37,7 @@
         "ext-mongodb": "*",
         "ext-pcov": "*",
         "apitte/core": "^0.6",
-        "brianium/paratest": "^3.1",
+        "brianium/paratest": "^4.0",
         "dg/bypass-finals": "^1.1",
         "doctrine/mongodb-odm": "^2.0",
         "doctrine/orm": "^2.7",
@@ -48,12 +48,12 @@
         "phpstan/phpstan-phpunit": "^0.12",
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^9.0",
         "slevomat/coding-standard": "^6.1",
         "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^4.4 | ^5.0",
-        "symfony/framework-bundle": "^4.4 | ^5.0",
-        "symfony/security-core": "^4.4 | ^5.0"
+        "symfony/browser-kit": "^5.0",
+        "symfony/framework-bundle": "^5.0",
+        "symfony/security-core": "^5.0"
     }
 }
