--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -29,6 +29,7 @@ parameters:
 		- '#T_DOC_COMMENT_TAG#'
 		- '#T_DOC_COMMENT_WHITESPACE#'
 		- '#T_STRING_CONCAT#'
+		- '#T_OPEN_SHORT_ARRAY#'
 
 services:
 	-
@@ -47,10 +48,10 @@ services:
 					function: 'print_r()'
 					message: 'use logger instead'
 				-
-					function: 'file_put_content()'
+					function: 'file_put_contents()'
 					message: 'use Hanaboso\Utils\File\Files::putContent() or logger instead'
 				-
-					function: 'file_get_content()'
+					function: 'file_get_contents()'
 					message: 'use Hanaboso\Utils\File\Files::getContent() instead'
 				-
 					function: 'json_decode()'
