--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
     app:
-        image: hanabosocom/php-base:php-7.4-alpine
+        image: hanabosocom/php-dev:php-7.4
         user: ${DEV_UID}:${DEV_GID}
         environment:
             COMPOSER_HOME: ${HOME}/dev/.composer
