--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
-    "version": "1.1.23",
+    "version": "1.1.24",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -38,7 +38,7 @@
         "ext-mongodb": "*",
         "ext-pcov": "*",
         "apitte/core": "^0.6",
-        "brianium/paratest": "^3.1 | ^4.0",
+        "brianium/paratest": "^4.0",
         "dg/bypass-finals": "^1.1",
         "doctrine/mongodb-odm": "^2.0",
         "doctrine/orm": "^2.7",
@@ -49,8 +49,8 @@
         "phpstan/phpstan-phpunit": "^0.12",
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
-        "phpunit/phpunit": "^8.5 | ^9.0",
-        "slevomat/coding-standard": "^6.2",
+        "phpunit/phpunit": "^9.1",
+        "slevomat/coding-standard": "6.2.0",
         "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^5.0",
