--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
     "license": "MIT",
-    "version": "1.1.24",
+    "version": "1.1.25",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -50,7 +50,7 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^9.1",
-        "slevomat/coding-standard": "6.2.0",
+        "slevomat/coding-standard": "^6.3",
         "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^5.0",
