--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,25 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
+    "version": "1.1.28",
     "license": "MIT",
-    "version": "1.1.27",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
-            "role": "Owner",
-            "email": "info@hanaboso.com"
+            "email": "info@hanaboso.com",
+            "role": "Owner"
         },
         {
             "name": "Radek Jirsa",
-            "role": "Developer",
-            "email": "jirsa.r@hanaboso.com"
+            "email": "jirsa.r@hanaboso.com",
+            "role": "Developer"
         },
         {
             "name": "Radek Brůha",
-            "role": "Developer",
-            "email": "bruha.r@hanaboso.com"
+            "email": "bruha.r@hanaboso.com",
+            "role": "Developer"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "HanabosoCodingStandard\\": "HanabosoCodingStandard/",
-            "Hanaboso\\PhpCheckUtils\\PhpUnit\\": "PhpUnit/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "PHP_CodeSniffer\\": "vendor/squizlabs/php_codesniffer/src",
-            "Hanaboso\\TestsPhpCheckUtils\\": "tests"
-        }
-    },
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
@@ -42,6 +30,7 @@
         "dg/bypass-finals": "^1.2",
         "doctrine/mongodb-odm": "^2.1",
         "doctrine/orm": "^2.7",
+        "ergebnis/composer-normalize": "^2.5",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine": "^0.12",
@@ -56,5 +45,17 @@
         "symfony/browser-kit": "^5.1",
         "symfony/framework-bundle": "^5.1",
         "symfony/security-core": "^5.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "HanabosoCodingStandard\\": "HanabosoCodingStandard/",
+            "Hanaboso\\PhpCheckUtils\\PhpUnit\\": "PhpUnit/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PHP_CodeSniffer\\": "vendor/squizlabs/php_codesniffer/src",
+            "Hanaboso\\TestsPhpCheckUtils\\": "tests"
+        }
     }
 }
