--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
-    "description": "Utils for php development - CodeSniffer, PhpStan, PhpStorm",
-    "version": "1.1.29",
+    "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
+    "version": "1.1.30",
     "license": "MIT",
     "authors": [
         {
@@ -22,15 +22,13 @@
     ],
     "require": {
         "php": ">=7.4",
-        "ext-json": "*",
-        "ext-mongodb": "*",
         "ext-pcov": "*",
         "apitte/core": "^0.6",
-        "brianium/paratest": "^4.0",
+        "brianium/paratest": "^4.1",
         "dg/bypass-finals": "^1.2",
         "doctrine/mongodb-odm": "^2.1",
         "doctrine/orm": "^2.7",
-        "ergebnis/composer-normalize": "^2.5",
+        "ergebnis/composer-normalize": "^2.6",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine": "^0.12",
@@ -38,13 +36,17 @@
         "phpstan/phpstan-phpunit": "^0.12",
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
-        "phpunit/phpunit": "^9.1",
+        "phpunit/phpunit": "^9.2",
         "slevomat/coding-standard": "^6.3",
         "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^5.1",
         "symfony/framework-bundle": "^5.1",
         "symfony/security-core": "^5.1"
+    },
+    "require-dev": {
+        "ext-json": "*",
+        "ext-mongodb": "*"
     },
     "autoload": {
         "psr-4": {
