--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.30",
+    "version": "1.1.31",
     "license": "MIT",
     "authors": [
         {
@@ -29,6 +29,7 @@
         "doctrine/mongodb-odm": "^2.1",
         "doctrine/orm": "^2.7",
         "ergebnis/composer-normalize": "^2.6",
+        "ergebnis/phpstan-rules": "^0.15",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine": "^0.12",
