--- a/phpstan.neon
+++ b/phpstan.neon
@@ -28,10 +28,12 @@ parameters:
 		- '#Call to an undefined method Doctrine\\ODM\\MongoDB\\DocumentRepository::*.#' # remove after better doctrine support
 	ergebnis:
 		allowAbstractClasses: true
-		classesAllowedToBeExtended: []
+		classesAllowedToBeExtended:
+			- Symfony\Component\HttpKernel\Kernel
+			- Symfony\Bundle\FrameworkBundle\Test\KernelTestCase
+			- Symfony\Bundle\FrameworkBundle\Test\WebTestCase
 		classesNotRequiredToBeAbstractOrFinal: []
-		interfacesImplementedByContainers:
-			- Psr\Container\ContainerInterface
+		interfacesImplementedByContainers: []
 
 parametersSchema:
 	ergebnis: structure([
@@ -148,7 +150,7 @@ rules:
 	- PHPStan\Rules\VariableVariables\VariableMethodCallRule
 	- PHPStan\Rules\VariableVariables\VariableStaticMethodCallRule
 	- PHPStan\Rules\VariableVariables\VariableStaticPropertyFetchRule
-	- PHPStan\Rules\VariableVariables\VariableVariablesRule.
+	- PHPStan\Rules\VariableVariables\VariableVariablesRule
 	- Ergebnis\PHPStan\Rules\Expressions\NoCompactRule
 	- Ergebnis\PHPStan\Rules\Expressions\NoErrorSuppressionRule
 	- Ergebnis\PHPStan\Rules\Expressions\NoEvalRule
