--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.35",
+    "version": "1.1.36",
     "license": "MIT",
     "authors": [
         {
@@ -24,7 +24,7 @@
         "php": ">=7.4",
         "ext-pcov": "*",
         "apitte/core": "^0.6",
-        "brianium/paratest": "^4.2",
+        "brianium/paratest": "^4.2 || ^5.0",
         "dg/bypass-finals": "^1.2",
         "doctrine/mongodb-odm": "^2.1",
         "doctrine/orm": "^2.7",
