--- a/phpstan.neon
+++ b/phpstan.neon
@@ -42,9 +42,11 @@ parameters:
 			- Symfony\Bundle\FrameworkBundle\Test\KernelTestCase
 			- Symfony\Bundle\FrameworkBundle\Test\WebTestCase
 			- Symfony\Component\Console\Command\Command
+			- Symfony\Component\DependencyInjection\Extension\Extension
 			- Symfony\Component\HttpKernel\Bundle\Bundle
 			- Symfony\Component\HttpKernel\DependencyInjection\Extension
 			- Symfony\Component\HttpKernel\Kernel
+			- Symfony\Component\Security\Core\Authentication\Token\UsernamePasswordToken
 			- Symfony\Contracts\EventDispatcher\Event
 		classesNotRequiredToBeAbstractOrFinal: []
 		interfacesImplementedByContainers: []
