--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,9 @@
 includes:
-	- ./../../phpstan/phpstan-nette/extension.neon
+#	- ./../../phpstan/phpstan-nette/extension.neon
 	- ./../../phpstan/phpstan-symfony/extension.neon
 	- ./../../phpstan/phpstan-phpunit/extension.neon
 	- ./../../phpstan/phpstan-doctrine/extension.neon
-	- ./../../phpstan/phpstan-nette/rules.neon
+#	- ./../../phpstan/phpstan-nette/rules.neon
 	- ./../../phpstan/phpstan-symfony/rules.neon
 	- ./../../phpstan/phpstan-phpunit/rules.neon
 	- ./../../phpstan/phpstan-doctrine/rules.neon
