--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.37",
+    "version": "1.1.38",
     "license": "MIT",
     "authors": [
         {
@@ -23,9 +23,8 @@
     "require": {
         "php": ">=7.4",
         "ext-pcov": "*",
-        "brianium/paratest": "^4.2 || ^5.0",
-        "dg/bypass-finals": "^1.2",
-        "doctrine/mongodb-odm": "^2.1",
+        "brianium/paratest": "^5.0",
+        "dg/bypass-finals": "^v1.3",
         "doctrine/orm": "^2.7",
         "ergebnis/composer-normalize": "^2.8",
         "ergebnis/phpstan-rules": "^0.15",
@@ -35,7 +34,7 @@
         "phpstan/phpstan-phpunit": "^0.12",
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "^9.4",
         "slevomat/coding-standard": "^6.4",
         "spaze/phpstan-disallowed-calls": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
@@ -43,12 +42,9 @@
         "symfony/framework-bundle": "^5.1",
         "symfony/security-core": "^5.1"
     },
-    "require-dev": {
-        "ext-json": "*",
-        "ext-mongodb": "*"
-    },
     "suggest": {
         "apitte/core": "Install me, if you need to use ControllerTestTrait in Nette.",
+        "doctrine/mongodb-odm": "Install me, if you need mongo.",
         "phpstan/phpstan-nette": "Install me, for enable PHPStan for Nette."
     },
     "autoload": {
