--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.38",
+    "version": "1.1.39",
     "license": "MIT",
     "authors": [
         {
@@ -22,11 +22,10 @@
     ],
     "require": {
         "php": ">=7.4",
+        "ext-json": "*",
         "ext-pcov": "*",
         "brianium/paratest": "^5.0",
         "dg/bypass-finals": "^v1.3",
-        "doctrine/orm": "^2.7",
-        "ergebnis/composer-normalize": "^2.8",
         "ergebnis/phpstan-rules": "^0.15",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
@@ -36,15 +35,22 @@
         "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^9.4",
         "slevomat/coding-standard": "^6.4",
-        "spaze/phpstan-disallowed-calls": "^0.12",
+        "spaze/phpstan-disallowed-calls": "^v1.0.0",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^5.1",
         "symfony/framework-bundle": "^5.1",
         "symfony/security-core": "^5.1"
     },
+    "require-dev": {
+        "apitte/core": "^v0.6",
+        "doctrine/mongodb-odm": "^2.1",
+        "doctrine/orm": "^2.7",
+        "phpstan/phpstan-nette": "^0.12"
+    },
     "suggest": {
         "apitte/core": "Install me, if you need to use ControllerTestTrait in Nette.",
-        "doctrine/mongodb-odm": "Install me, if you need mongo.",
+        "doctrine/mongodb-odm": "Install me, if you using MongoDB.",
+        "doctrine/orm": "Install me, if you using MySQL.",
         "phpstan/phpstan-nette": "Install me, for enable PHPStan for Nette."
     },
     "autoload": {
