--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -1,7 +1,9 @@
 includes:
+	- ./../vendor/phpstan/phpstan-nette/extension.neon
 	- ./../vendor/phpstan/phpstan-symfony/extension.neon
 	- ./../vendor/phpstan/phpstan-phpunit/extension.neon
 	- ./../vendor/phpstan/phpstan-doctrine/extension.neon
+	- ./../vendor/phpstan/phpstan-nette/rules.neon
 	- ./../vendor/phpstan/phpstan-symfony/rules.neon
 	- ./../vendor/phpstan/phpstan-phpunit/rules.neon
 	- ./../vendor/phpstan/phpstan-doctrine/rules.neon
