--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.39",
+    "version": "1.1.40",
     "license": "MIT",
     "authors": [
         {
@@ -24,8 +24,9 @@
         "php": ">=7.4",
         "ext-json": "*",
         "ext-pcov": "*",
-        "brianium/paratest": "^5.0",
+        "brianium/paratest": "^v6.1",
         "dg/bypass-finals": "^v1.3",
+        "ergebnis/composer-normalize": "^2.11",
         "ergebnis/phpstan-rules": "^0.15",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
@@ -33,18 +34,17 @@
         "phpstan/phpstan-phpunit": "^0.12",
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
-        "phpunit/phpunit": "^9.4",
+        "phpunit/phpunit": "^9.5",
         "slevomat/coding-standard": "^6.4",
-        "spaze/phpstan-disallowed-calls": "^v1.0.0",
+        "spaze/phpstan-disallowed-calls": "^v1.1",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^5.1",
-        "symfony/framework-bundle": "^5.1",
-        "symfony/security-core": "^5.1"
+        "symfony/browser-kit": "^5.2",
+        "symfony/framework-bundle": "^5.2",
+        "symfony/security-core": "^5.2"
     },
     "require-dev": {
-        "apitte/core": "^v0.6",
         "doctrine/mongodb-odm": "^2.1",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "^2.8",
         "phpstan/phpstan-nette": "^0.12"
     },
     "suggest": {
