--- a/phpstan.neon
+++ b/phpstan.neon
@@ -146,6 +146,9 @@ services:
 		tags:
 			- phpstan.rules.rule
 
+	errorFormatter.custom:
+		class: HanabosoCodingStandard\Reports\PhpStanReport
+
 rules:
 	- PHPStan\Rules\Classes\RequireParentConstructCallRule
 	- PHPStan\Rules\DisallowedConstructs\DisallowedImplicitArrayCreationRule
