--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.40",
+    "version": "1.1.41",
     "license": "MIT",
     "authors": [
         {
@@ -21,12 +21,12 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.4 || >=8.0",
         "ext-json": "*",
         "ext-pcov": "*",
         "brianium/paratest": "^v6.1",
         "dg/bypass-finals": "^v1.3",
-        "ergebnis/composer-normalize": "^2.11",
+        "ergebnis/composer-normalize": "^2.13",
         "ergebnis/phpstan-rules": "^0.15",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
@@ -38,9 +38,9 @@
         "slevomat/coding-standard": "^6.4",
         "spaze/phpstan-disallowed-calls": "^v1.1",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^5.2",
-        "symfony/framework-bundle": "^5.2",
-        "symfony/security-core": "^5.2"
+        "symfony/browser-kit": "^v5.2",
+        "symfony/framework-bundle": "^v5.2",
+        "symfony/security-core": "^v5.2"
     },
     "require-dev": {
         "doctrine/mongodb-odm": "^2.1",
