--- a/phpstan.neon
+++ b/phpstan.neon
@@ -61,6 +61,7 @@ parametersSchema:
 
 services:
 	- Spaze\PHPStan\Rules\Disallowed\DisallowedHelper
+	- Spaze\PHPStan\Rules\Disallowed\FileHelper
 	-
 		class: Spaze\PHPStan\Rules\Disallowed\FunctionCalls
 		tags:
