--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -37,7 +37,8 @@ parameters:
 			- Symfony\Component\HttpKernel\Kernel
 			- Symfony\Bundle\FrameworkBundle\Test\KernelTestCase
 			- Symfony\Bundle\FrameworkBundle\Test\WebTestCase
-		classesNotRequiredToBeAbstractOrFinal: []
+		classesNotRequiredToBeAbstractOrFinal:
+			- Hanaboso\PhpCheckUtils\TwigCs\TwigRuleset
 		interfacesImplementedByContainers: []
 
 parametersSchema:
@@ -50,6 +51,7 @@ parametersSchema:
 
 services:
 	- Spaze\PHPStan\Rules\Disallowed\DisallowedHelper
+	- Spaze\PHPStan\Rules\Disallowed\FileHelper
 	-
 		class: Spaze\PHPStan\Rules\Disallowed\FunctionCalls
 		tags:
