--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.1.42",
+    "version": "1.2.0",
     "license": "MIT",
     "authors": [
         {
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-pcov": "*",
         "brianium/paratest": "^v6.2",
@@ -35,9 +35,9 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
         "phpunit/phpunit": "^9.5",
-        "slevomat/coding-standard": "^6.4",
+        "slevomat/coding-standard": "^7.0",
         "spaze/phpstan-disallowed-calls": "^v1.4.0",
-        "squizlabs/php_codesniffer": "^3.5",
+        "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "^v5.2",
         "symfony/framework-bundle": "^v5.2",
         "symfony/security-core": "^v5.2"
