--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
-    "version": "1.2.3",
+    "version": "1.3.0",
     "license": "MIT",
     "authors": [
         {
@@ -22,11 +22,12 @@
     ],
     "require": {
         "php": "^8.0",
+        "ext-apcu": "*",
         "ext-json": "*",
         "ext-pcov": "*",
         "brianium/paratest": "^v6.3",
         "dg/bypass-finals": "^v1.3",
-        "ergebnis/composer-normalize": "^2.13",
+        "ergebnis/composer-normalize": "^2.14",
         "ergebnis/phpstan-rules": "^0.15",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^0.12",
