--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.4.1",
+    "version": "1.4.2",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -27,16 +27,16 @@
         "ext-pcov": "*",
         "brianium/paratest": "^v6.4",
         "dg/bypass-finals": "^v1.3",
-        "ergebnis/composer-normalize": "^2.25",
+        "ergebnis/composer-normalize": "^2.26",
         "ergebnis/phpstan-rules": "^1.0",
         "php-mock/php-mock-phpunit": "^2.6",
-        "phpstan/phpstan": "^1.5",
+        "phpstan/phpstan": "^1.6",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-strict-rules": "^1.1",
+        "phpstan/phpstan-strict-rules": "^1.2",
         "phpstan/phpstan-symfony": "^1.1",
         "phpunit/phpunit": "^9.5",
-        "slevomat/coding-standard": "^7.1",
+        "slevomat/coding-standard": "^7.2",
         "spaze/phpstan-disallowed-calls": "^v2.3",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "^v6.0",
@@ -44,9 +44,9 @@
         "symfony/security-core": "^v6.0"
     },
     "require-dev": {
-        "doctrine/mongodb-odm": "^2.3",
-        "doctrine/orm": "^2.11",
-        "friendsoftwig/twigcs": "dev-master",
+        "doctrine/mongodb-odm": "^2.4",
+        "doctrine/orm": "^2.12",
+        "friendsoftwig/twigcs": "^v6.0.0",
         "phpstan/phpstan-nette": "^1.0"
     },
     "suggest": {
