--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -1,4 +1,6 @@
 includes:
+	- ./../vendor/phpstan/phpstan/conf/bleedingEdge.neon
+	- ./../vendor/phpstan/phpstan-strict-rules/rules.neon
 	- ./../vendor/phpstan/phpstan-nette/extension.neon
 	- ./../vendor/phpstan/phpstan-symfony/extension.neon
 	- ./../vendor/phpstan/phpstan-phpunit/extension.neon
@@ -32,6 +34,14 @@ parameters:
 		- '#T_DOC_COMMENT_WHITESPACE#'
 		- '#T_STRING_CONCAT#'
 		- '#T_OPEN_SHORT_ARRAY#'
+		- '#file_put_contents\(\) is forbidden#'
+		- '#file_get_contents\(\) is forbidden#'
+		- '#json_encode\(\) is forbidden#'
+		- '#json_decode\(\) is forbidden#'
+		- '#exec\(\) is forbidden#'
+		- '#Call to an undefined static method#'
+		- '#has unknown class Apitte#'
+		- '#does not extend any class#'
 	ergebnis:
 		allowAbstractClasses: true
 		classesAllowedToBeExtended:
@@ -43,6 +53,10 @@ parameters:
 			- Hanaboso\PhpCheckUtils\TwigCs\TwigRuleset
 		interfacesImplementedByContainers: []
 
+	strictRules:
+			disallowedLooseComparison: false
+			disallowedConstructs: false
+			booleansInConditions: false
 
 	disallowedStaticCalls:
 		-
@@ -74,8 +88,6 @@ parametersSchema:
 	])
 
 services:
-	-
-		class: PHPStan\Rules\Operators\OperatorRuleHelper
 	-
 		class: PHPStan\Rules\VariableVariables\VariablePropertyFetchRule
 		arguments:
@@ -125,16 +137,6 @@ rules:
 	- PHPStan\Rules\DisallowedConstructs\DisallowedImplicitArrayCreationRule
 	- PHPStan\Rules\ForeachLoop\OverwriteVariablesWithForeachRule
 	- PHPStan\Rules\Methods\WrongCaseOfInheritedMethodRule
-	- PHPStan\Rules\Operators\OperandInArithmeticPostDecrementRule
-	- PHPStan\Rules\Operators\OperandInArithmeticPostIncrementRule
-	- PHPStan\Rules\Operators\OperandInArithmeticPreDecrementRule
-	- PHPStan\Rules\Operators\OperandInArithmeticPreIncrementRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticAdditionRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticDivisionRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticExponentiationRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticModuloRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticMultiplicationRule
-	- PHPStan\Rules\Operators\OperandsInArithmeticSubtractionRule
 	- PHPStan\Rules\StrictCalls\DynamicCallOnStaticMethodsRule
 	- PHPStan\Rules\StrictCalls\StrictFunctionCallsRule
 	- PHPStan\Rules\SwitchConditions\MatchingTypeInSwitchCaseConditionRule
