--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -52,6 +52,7 @@ parameters:
 		classesNotRequiredToBeAbstractOrFinal:
 			- Hanaboso\PhpCheckUtils\TwigCs\TwigRuleset
 		interfacesImplementedByContainers: []
+		methodsAllowedToUseContainerTypeDeclarations: []
 
 	strictRules:
 			disallowedLooseComparison: false
@@ -85,6 +86,7 @@ parametersSchema:
 		classesAllowedToBeExtended: listOf(string())
 		classesNotRequiredToBeAbstractOrFinal: listOf(string())
 		interfacesImplementedByContainers: listOf(string())
+		methodsAllowedToUseContainerTypeDeclarations: listOf(string())
 	])
 
 services:
@@ -126,6 +128,7 @@ services:
 		class: Ergebnis\PHPStan\Rules\Methods\NoParameterWithContainerTypeDeclarationRule
 		arguments:
 			interfacesImplementedByContainers: %ergebnis.interfacesImplementedByContainers%
+			methodsAllowedToUseContainerTypeDeclarations: %ergebnis.methodsAllowedToUseContainerTypeDeclarations%
 		tags:
 			- phpstan.rules.rule
 
