--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -16,15 +16,13 @@ includes:
 parameters:
 	polluteScopeWithLoopInitialAssignments: false
 	polluteScopeWithAlwaysIterableForeach: false
-	checkAlwaysTrueCheckTypeFunctionCall: true
-	checkAlwaysTrueInstanceof: true
-	checkAlwaysTrueStrictComparison: true
 	checkExplicitMixedMissingReturn: true
 	checkFunctionNameCase: true
 	reportMaybesInMethodSignatures: true
 	reportStaticMethodSignatures: true
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
+		- identifier: ternary.shortNotAllowed
 		- '#Expression \"\$.*\" on a separate line does not do anything\.#'
 		- '#T_ANON_CLASS#'
 		- '#T_DOC_COMMENT_CLOSE_TAG#'
@@ -56,7 +54,6 @@ parameters:
 
 	strictRules:
 			disallowedLooseComparison: false
-			disallowedConstructs: false
 			booleansInConditions: false
 
 	disallowedStaticCalls:
@@ -101,6 +98,7 @@ services:
 		class: PHPStan\Rules\Cast\UselessCastRule
 		arguments:
 			treatPhpDocTypesAsCertain: %treatPhpDocTypesAsCertain%
+			treatPhpDocTypesAsCertainTip: %tips.treatPhpDocTypesAsCertain%
 		tags:
 			- phpstan.rules.rule
 
